--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -20,7 +20,7 @@ videos:
 
 conferencia:
   url: https://meet.jit.si/obj1#config.startWithVideoMuted=true
-  horarios: jueves 18 de Agosto, de 18.30 a 20.00
+  horarios: Martes 18 de Agosto, de 18.30 a 20.00
 
 entrega:
   fecha: 2020-08-25T14:00
