bug martes por jueves en anuncio clase

--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -34,7 +34,7 @@ videos:
 
 conferencia:
   url: https://meet.jit.si/obj1#config.startWithVideoMuted=true
-  horarios: Jueves 8 de Septiembre de 18.30 a 20.00.
+  horarios: Martes 8 de Septiembre de 18.30 a 20.00.
 
 ejercicios:
   - name: Golosinas (el de los videos)
