bugfix día conferencia semana 8

--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -32,7 +32,7 @@ videos:
 
 conferencia:
   url: https://meet.jit.si/obj1#config.startWithVideoMuted=true
-  horarios: Jueves 29 de Septiembre, de 18.30 a 20.00.
+  horario: Martes 29 de Septiembre, de 18.30 a 20.00.
 
 
 entrega:
