--- a/_data/cursada_actual/14.yml
+++ b/_data/cursada_actual/14.yml
@@ -5,7 +5,7 @@ descripcion: |
   **Importante**  
    * **Obligatoriamente** deben recuperar todos aquellos alumnos que se sacaron nota menor a **4**. **Opcionalmente** pueden recuperar aquellos alumnos que se sacaron notas entre **4 y 6** para evitar el examen integrador.
   
-  Para la defensa de los trabajos practicos nos vamos a conectar en un horario especifico con cada grupo. En el horario asignado tienen que estar todos los integrantes, nos iremos a una sala aparte, 20 minutos aproximadamente,  y un miembreo del equipo deberá se el encargado de mostrar el juego funcionado.
+  Para la defensa de los trabajos prácticos nos vamos a conectar en un horario especifico con cada grupo. En el horario asignado tienen que estar todos los integrantes, nos iremos a una sala aparte, 20 minutos aproximadamente,  y un miembro del equipo deberá se el encargado de mostrar el juego funcionado.
   
   **Horarios Defensa TP**  
     * **Grupo 1 - 18.30 hs** (GELAY J; CUTRI A.; ACOSTA M; GARCIA O.)
