--- a/_data/cursada_2021s1/01.yml
+++ b/_data/cursada_2021s1/01.yml
@@ -15,8 +15,8 @@ videos:
     url: https://youtu.be/aAfjr8-1-0Y
 
 conferencia:
-  url: https://meet.google.com/svg-wttm-rbx
-  horarios: martes 10 de Agosto, de 18.15 a 20.45 hs. 
+  url: https://meet.jit.si/obj1#config.startWithVideoMuted=true
+  horarios: martes 30 de Marzo, de  18.30 a 20.00 hs.
 
 entrega:
   fecha: 2021-04-05T23:59
