--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -16,10 +16,10 @@ videos:
 
 conferencia:
   url: https://meet.google.com/svg-wttm-rbx
-  horarios: Comisión 1 y 2 Martes 10 de Agosto, de 18.15 a 20.45 hs. 
+  horarios: Comisión 1 y 2 - Martes 10 de Agosto, de 18.15 a 20.45 hs. 
 
 entrega:
-  fecha: 2021-08-15T23:59
+  fecha: 2021-08-16T23:59
   mumuki:
     - nombre: Multipepita la golondrina
       url: https://mumuki.io/unahur-obj1/lessons/731-objetos-y-mensajes-acompanamiento-multipepita-etapa-1
