--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -5,6 +5,11 @@ descripcion: |
   Uf, bastantes cosas ... que vamos a ir profundizando y repasando más adelante, el objetivo de esta semana es introducir algunas ideas que vamos a desarrollar durante todo el curso. 
 
 videos:
+
+  - nombre: Grabación Clase II - C1 - 17-08-2021
+    url: https://youtu.be/0MO82BNRfsA
+  - nombre: Grabación Clase II - C2 - 17-08-2021
+    url: https://youtu.be/ZmmhQkQ54Q8
   - nombre: Agregándole métodos a Pepita
     url: https://youtu.be/TQba-e_m5Lc
   - nombre: Manejo correcto de valores booleanos - "miedo al booleano"
