Grabación Clase III

--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -11,6 +11,10 @@ descripcion: |
   Todo esto está en los videos, mírenselos bien por favor.
 
 videos:
+  - nombre: Grabación Clase IIi - C1 - 24-08-2021
+    url: https://youtu.be/oZ56Yp7CkQk
+  - nombre: Grabación Clase IIi - C2 - 14-08-2021
+    url: https://youtu.be/sxtXDQIwgQI
   - nombre: El modelo de Pepita se extiende - Roque el entrenador, y dos amigas de Pepita.
     url: https://youtu.be/1RlwP_WLHRg
   - nombre: Atributos que hacen referencia a objetos "nuestros" - el bolichito en el ejercicio de Gustos.
