--- a/_data/cursada_actual/04.yml
+++ b/_data/cursada_actual/04.yml
@@ -13,7 +13,9 @@ descripcion: |
 
 
 videos:
-  - nombre: Referencias - usando el ejercicio de gustos.
+  - nombre: Grabación Clase IV - Ambas comisiones - 31-08-2021
+    url: https://youtu.be/hoUNjqkjvEI
+  - nombre: Referencias - usando el ejercicio de gustos
     url: https://youtu.be/CGO3htDNY-8
   - nombre: Empanadas Giménez parte 1 - Giménez, dos empleados, un test
     url: https://youtu.be/Kalojrle0kk
