Semana 5 una comision

--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -33,11 +33,8 @@ videos:
 
 
 conferencia:
-  horarios: Tenemos **dos** Comisiones. Ingresar al link que corresponde a su comisión.
+  horarios: Esta semana todos nos juntamos en el meet del profesor Lucas.
  
-  horario0: Martes 24 de Agosto, a partir de las 18.15 con Gerardo Gonzalez Tulian 
-  url0: https://meet.google.com/ome-vhnw-vin
-
   horario1: Martes 24 de Agosto, a partir de las 18.00 con Lucas Spigariol 
   url1: https://meet.google.com/haa-wciy-mrt
 
