--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -13,6 +13,10 @@ descripcion: |
   **Después** de leer el "otro apunte sobre Git" y de tenerlo instalado, léanse la "Guía rápida de cómo usar Git".  
 
 videos:
+  - nombre: Grabación Clase V - Ambas comisiones - 07-09-2021 - Parte I
+    url: https://youtu.be/OuObD1p2zoc
+  - nombre: Grabación Clase V - Ambas comisiones - 07-09-2021 - Parte II
+    url: https://youtu.be/HdFtDDYbv28
   - nombre: Introducción a listas
     url: https://youtu.be/Nm3-USo-p_c
   - nombre: Qué es eso de los bloques 
