--- a/_data/cursada_actual/07.yml
+++ b/_data/cursada_actual/07.yml
@@ -7,6 +7,10 @@ descripcion: |
 
 
 videos:
+  - nombre: Grabación Clase VII - C1 - 28-09-2021
+    url: https://youtu.be/X8MfVqeXGrA
+  - nombre: Grabación Clase VII - C2 - 28-09-2021
+    url: https://youtu.be/WdbhHoH0utU
   - nombre: expresiones compuestas con colecciones, operaciones combinadas
     url: https://youtu.be/hji1pHqFhPo
   - nombre: método tiene(cosa) en la casa de Pepe y Julián - hay que agregar métodos a muchos objetos
