--- a/_data/cursada_actual/06.yml
+++ b/_data/cursada_actual/06.yml
@@ -13,6 +13,10 @@ descripcion: |
 
 
 videos:
+  - nombre: Grabación Clase VI - C1 - 14-09-2021
+    url: https://youtu.be/_1qAVm-4-4I
+  - nombre: Grabación Clase VI - C2 - 14-09-2021
+    url: https://youtu.be/0lFjm_AnCg4
   - nombre: Dos golosinas especiales, golosina bañada y tutti-frutti. 
     url: https://youtu.be/LHL8fzExoAw
   - nombre: Casa de Pepe y Julián - varios métodos de recorrido de una lista.
