--- a/_data/cursada_actual/10.yml
+++ b/_data/cursada_actual/10.yml
@@ -14,7 +14,12 @@ descripcion: |
   * Entrega y defensa del TP grupal  **16 de Noviembre**
 
 videos:
- 
+  - nombre: Grabación Clase X - C1  - 19-10-2021
+    url: https://youtu.be/Slbi38Kkf0I
+  - nombre: Grabación Clase X (Parte I) - C2 - 19-10-2021
+    url: https://youtu.be/ZYUjE0NXtdk
+  - nombre: Grabación Clase X (Parte II) - C2 - 19-10-2021
+    url: https://youtu.be/lo2g-YkPeeA    
   - nombre: Herencia -  Naves Espaciales Parte I
     url: https://youtu.be/hmO-G8OLuXY
   - nombre: Herencia - Naves Espaciales Parte II
