--- a/_data/cursada_2021s2/01.yml
+++ b/_data/cursada_2021s2/01.yml
@@ -19,12 +19,8 @@ videos:
     
 
 conferencia:
-  horario0: Martes 17 de Agosto, de 18.15 a 20.45 aprox., Gerardo Gonzalez Tulian 
-  url0: https://meet.google.com/ome-vhnw-vin
-
-  horario1: Martes 17 de Agosto, de 18.15 a 20.45 aprox., Lucas Spigariol 
-  url1: https://meet.google.com/haa-wciy-mrt
-
+  url: https://meet.google.com/svg-wttm-rbx
+  horarios: Comisión 1 y 2 - Martes 10 de Agosto, de 18.15 a 20.45 hs. 
 
 entrega:
   fecha: 2021-08-16T23:59
