--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -11,6 +11,8 @@ videos:
     url: https://youtu.be/7hXl2kJs2GUs
   - nombre: Definimos un objeto
     url: https://youtu.be/aAfjr8-1-0Y
+  - nombre: Primeros pasos con GIT. Grabación de la clase del 2 de Abril dictada por Hernan
+    url: https://youtu.be/7hSpIAHO3yU
 
     
 
