Video Noche Semana 2

--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -7,6 +7,8 @@ descripcion: |
  
 
 videos:
+  - nombre: Grabacion Clase II - 05-04-2022 - Noche
+    url: https://youtu.be/5TV3_AwxMOA
   - nombre: Agregándole métodos a Pepita
     url: https://youtu.be/TQba-e_m5Lc
   - nombre: Manejo correcto de valores booleanos - "miedo al booleano"
