--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -21,6 +21,8 @@ videos:
     url: https://youtu.be/_JSncjztLAY
   - nombre: Ejercicio "Gustos" - comentarios para encararlo
     url: https://youtu.be/dRy92EB4ppM
+  - nombre: Grabación de la clase del 9 de Abril dictada por Hernan
+    url: https://youtu.be/EzHtyogWBVA
 
 conferencia:
   
