--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -15,7 +15,8 @@ videos:
     url: https://youtu.be/7QRWdouBcsY
   - nombre: Introducción a los tests automático
     url: https://youtu.be/1BNEa7ma5cA
-
+  - nombre: Grabación de la clase del 16 de Abril dictada por Hernan
+    url: https://youtu.be/JCBVBzdGQGQ
 
 conferencia:
   horario0: Presencial - Martes 12 de Abril, a partir de las 18.00 , Gerardo Gonzalez Tulian 
