Subir video semana 5

--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -18,6 +18,8 @@ descripcion:
 
 
 videos:
+  - nombre: Grabación de la clase virtual del Martes 26-Abr-2022 Noche
+    url: https://youtu.be/eRuLVRywswQ
   - nombre: Introducción a listas.
     url: https://youtu.be/Nm3-USo-p_c
   - nombre: Qué es eso de los bloques.
