--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -27,7 +27,7 @@ videos:
   - nombre: expresión ternaria - un lindo truquito para escribir un poco menos, y entender un poco más
     url: https://youtu.be/1XdYc-91Vtg
   - nombre: Grabación de la clase virtual del Martes 17-Mayo-2022 realizada por Gerardo
-    ulr: https://youtu.be/dc0ZwpgJnss
+    url: https://youtu.be/dc0ZwpgJnss
   - nombre: Grabación de la clase virtual del Sábado 21-Mayo-2022 realizada por Hernan
     url: https://youtu.be/KzZsWPzMMks
 
