--- a/_data/cursada_actual/09.yml
+++ b/_data/cursada_actual/09.yml
@@ -21,6 +21,11 @@ videos:
     url: https://youtu.be/akiTj8ZZhPU
   - nombre: Nueva Instancia dentro de una expresión
     url: https://youtu.be/01ewdTUk658
+  - nombre: Grabación de la clase virtual del Martes 24-Mayo-2022 realizada por Hernán
+    url: https://youtu.be/jBDeTK0DA58
+  - nombre: Grabación de la clase virtual del Sábado 28-Mayo-2022 realizada por Hernan
+    url: https://youtu.be/DwnGdYu3VE0
+
 
 conferencia:
   horarios: Tenemos **dos** Comisiones. Ingresar al link que corresponde a su comisión.
