--- a/_data/cursada_actual/10.yml
+++ b/_data/cursada_actual/10.yml
@@ -19,7 +19,10 @@ videos:
     url: https://youtu.be/FDhPs8Gqsz8
   - nombre: dinámico/estado (las instancias) vs lo estático/código (las clases)
     url: https://youtu.be/DfzCqQnT5g0
-
+  - nombre: Grabación de la clase virtual del Martes 31-Mayo-2022 realizada por Hernán
+    url: https://youtu.be/jGhiAVdObdU
+  - nombre: Grabación de la clase virtual del Sábado 04-Junio-2022 realizada por Hernan
+    url: https://youtu.be/oc45kT6XTSM
 
 conferencia:
   horarios: Tenemos **dos** Comisiones. Ingresar al link que corresponde a su comisión.
