--- a/_data/cursada_2022s1/01.yml
+++ b/_data/cursada_2022s1/01.yml
@@ -17,13 +17,13 @@ videos:
     
 
 conferencia:
-  horario0: Presencial - Martes 9 de Agosto, a partir de las 18.00 , Gerardo Gonzalez Tulian 
+  horario0: Presencial - Martes 29 de Marzo, a partir de las 18.00 , Gerardo Gonzalez Tulian 
 
-  horario1: Presencial - Jueves 11 de Agosto, a parir de las 14.00 hs., Lucas Spigariol 
+  horario1: Presencial - Miércoles 30 de Marzo, a parir de las 8.30 hs., Lucas Spigariol 
  
 
 entrega:
-  fecha: 2022-08-16T18:00
+  fecha: 2022-04-02T23:59
   mumuki:
     - nombre: Multipepita la golondrina
       url: https://mumuki.io/unahur-obj1/lessons/731-objetos-y-mensajes-acompanamiento-multipepita-etapa-1
