Corrección link Mumuki y modo de registrarse en Discord

--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -1,7 +1,6 @@
 descripcion: |
   Comenzaremos trabajando con las guías de **Mumuki** pero antes vas a tener que hacer lo siguiente:
-    * Registrarte ingresando en [Mumuki](https://mumuki.io/login). podés registrarte con tu cuenta de Google  o crearte una nueva dentro de Mumuki con un mail y contraseña que debes recordar para volver a ingresar. 
-    * Una vez registrado debes unirte al curso de la materia ingresando en [UnaHur-Obj1](https://mumuki.io/unahur-obj1/join/bV2-Fg)
+    * Registrarte al aula ingresando en [Mumuki-UnaHur-Obj1](https://mumuki.io/unahur-obj1/join/bV2-Fg). Podés registrarte con tu cuenta de Google  o crearte una nueva dentro de Mumuki con un mail y contraseña que debes recordar para volver a ingresar. 
     * **Importante:** Luego para ingresar siempre directamente al curso podes entrar por el link que hay en la esquina superior derecha de página que dice [Mumuki](https://mumuki.io/login?organization=unahur-obj1&origin=%2Funahur-obj1)
 
 videos:
