datos cursada semana 1

--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -16,9 +16,9 @@ videos:
     
 
 conferencia:
-  horario0: Presencial - Martes 9 de Agosto, a partir de las 18.00 , Gerardo Gonzalez Tulian 
+  horario0: Presencial - Martes 9 de Agosto, a partir de las 18.00hs. - Laboratorio 4 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian 
 
-  horario1: Presencial - Jueves 11 de Agosto, a parir de las 14.00 hs., Lucas Spigariol 
+  horario1: Presencial - Jueves 11 de Agosto, a parir de las 14.00hs. - Laboratorio 4 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol 
  
 
 entrega:
