corrección en la redacción de consigna semana 2

--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -3,7 +3,7 @@ descripcion: |
   En particular, vamos a ver qué es el **polimorfismo** en objetos, y a empezar a hablar de las ventajas que nos da para construir programas. 
   Relacionado con esto, también vamos a hablar de cómo se refleja la idea de **contrato** en la programación con objetos.
   Uf, bastantes cosas ... que vamos a ir profundizando y repasando más adelante, el objetivo de esta semana es introducir algunas ideas que vamos a desarrollar durante todo el curso. 
-  También les dejamos algunos videos de cursadas anteriores que tocan los mismos temas que vamos a ver durante la clase para seguir profundizando los temas.
+  También les dejamos algunos videos de cursadas anteriores que tocan los mismos temas que vamos a ver durante la clase. 
  
 
 videos:
