--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -19,6 +19,8 @@ videos:
     url: https://youtu.be/_JSncjztLAY
   - nombre: Ejercicio "Gustos" - comentarios para encararlo
     url: https://youtu.be/dRy92EB4ppM
+  - nombre: Grabación de la clase virtual del 16 de Agosto - Comisión C2 (Turno Noche)
+    url: https://youtu.be/O0lNcJ4tdPs
 
 
 conferencia:
