corrección link clase virtual jueves

--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -30,7 +30,7 @@ conferencia:
   horario0: Martes 16 de Agosto a partir de las 18.15hs, Gerardo Gonzalez Tulian 
   url0: https://meet.google.com/rqd-oxgm-wtr
   horario1: Jueves 18 de Agosto a partir de las 14:00 hs, Lucas Spigariol 
-  url1: https://meet.google.com/dya-xkkd-krm
+  url1: https://utn.zoom.us/j/88137014356?pwd=WkhFTEFTZXBDWUkxaDFRTVhkWTR3QT09
 
 
 entrega:
