agregado video clase virtual jueves 18-8-22

--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -21,6 +21,8 @@ videos:
     url: https://youtu.be/dRy92EB4ppM
   - nombre: Grabación de la clase virtual del 16 de Agosto - Comisión C2 (Turno Noche)
     url: https://youtu.be/O0lNcJ4tdPs
+  - nombre: Grabación de la clase virtual del 18 de Agosto - Comisión C1 (Turno Tarde)
+    url: https://youtu.be/_wVrvwqeG0c
 
 
 conferencia:
