agregado clase sábado semana 3 y semana 4

--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -13,8 +13,10 @@ videos:
     url: https://youtu.be/COoSQb9JuyQ
   - nombre: Creamos nuevos objetos - las temporadas de Mar del Plata en Pepita viajera
     url: https://youtu.be/7QRWdouBcsY
-  - nombre: Introducción a los tests automático
+  - nombre: Introducción a los tests automáticos
     url: https://youtu.be/1BNEa7ma5cA
+  - nombre: Grabación de la clase virtual del sábado 27 de Agosto
+    url: https://youtu.be/_JBL4yqaWiY
 
 conferencia:
   horario0: Presencial - Martes 23 de Agosto, a partir de las 18hs. en Laboratorio 4 de edificio Malvinas Argentinas. Prof. Gerardo Gonzalez Tulian y Hernán Coniglio
