agregado videos clases virtuales martes y jueves

--- a/_data/cursada_actual/04.yml
+++ b/_data/cursada_actual/04.yml
@@ -22,8 +22,12 @@ videos:
     url: https://youtu.be/Kalojrle0kk
   - nombre: Empanadas Giménez parte 2 - que hace cada empleado cuando cobra, uso de self
     url: https://youtu.be/3dWYlQw6TXA
-
-
+  - nombre: Grabación de la primera parte de clase virtual del martes 30 de Agosto (intro a Wollok Game)
+    url: https://youtu.be/NmXcbRMaGa0
+  - nombre: Grabación de la segunda parte de clase virtual del martes 30 de Agosto (ejercicio spa (polimorfismo))
+    url: https://youtu.be/pn8V6UxfXJc
+  - nombre: Grabación de la clase virtual del jueves 1 de Septiembre
+    url: https://youtu.be/yhxEvwaVNUE
 
 conferencia:
   horario0: Martes 30 de Agosto (virtual) a partir de las 18.15hs, Gerardo Gonzalez Tulian 
