agregado video clase sabado 10 de septiembre y agregado semana 6

--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -35,7 +35,8 @@ videos:
     url: https://youtu.be/sYLPxKc_QmA
   - nombre: Golosinas - más métodos usando listas
     url: https://youtu.be/kiQS1hRiowY
-
+  - nombre: Grabación de la clase virtual del sábado 10 de Septiembre
+    url: https://youtu.be/lGHzAn7t4iI
 
 
 conferencia:
