--- a/_data/cursada_actual/06.yml
+++ b/_data/cursada_actual/06.yml
@@ -18,7 +18,8 @@ videos:
     url: https://youtu.be/okf2VCfjvx4
   - nombre: Pensar en los tipos para elegir qué operación me resuelve un recorrido.
     url: https://youtu.be/cLfp2T_LSjg
-
+  - nombre: Grabación de la clase virtual del martes 13 de Septiembre (Polimorfismo y Colecciones)
+    url: https://youtu.be/ErJLFYgpnuQ
 
 conferencia:
   horario0: Martes 13 de Septiembre (VIRTUAL) a partir de las 18.00hs, Gerardo Gonzalez Tulian 
