agregado video sabado 17-9 y semana 7

--- a/_data/cursada_actual/06.yml
+++ b/_data/cursada_actual/06.yml
@@ -20,6 +20,8 @@ videos:
     url: https://youtu.be/cLfp2T_LSjg
   - nombre: Grabación de la clase virtual del martes 13 de Septiembre (Polimorfismo y Colecciones)
     url: https://youtu.be/ErJLFYgpnuQ
+  - nombre: Grabación de la clase virtual del sábado 17 de Septiembre con la introducción a clases.
+    url: https://youtu.be/gdz5j7eCc04
 
 conferencia:
   horario0: Martes 13 de Septiembre (VIRTUAL) a partir de las 18.00hs, Gerardo Gonzalez Tulian 
