aclaracion cambio clase del sabado

--- a/_data/cursada_actual/07.yml
+++ b/_data/cursada_actual/07.yml
@@ -7,6 +7,8 @@ descripcion: |
   
   Aunque NO hay entrega obligatoria intenten resolverlo solos, no se vuelvan locos, cada uno hace hasta donde puede y sus circunstancias lo permitan.
 
+  **ATENCIÓN**: La clase de apoyo del sábado 24/9/22 se pasa al: **Jueves 22/9 a las 19hs.**
+
 
 videos:
 
@@ -23,7 +25,6 @@ conferencia:
   horario0: PRESENCIAL - Martes 20 de Septiembre, a partir de las 18hs. en Laboratorio 4 de edificio Malvinas Argentinas. Prof. Gerardo Gonzalez Tulian y Hernán Coniglio
 
   horario1: PRESENCIAL - Jueves 22 de Septiembre, a parir de las 14 hs. en Laboratorio 4 de edificio Malvinas Argentinas. Prof. Lucas Spigariol 
-
 
 ejercicios:
 
