agregado link clase virtual jueves 15-9-22 en semana 6

--- a/_data/cursada_actual/06.yml
+++ b/_data/cursada_actual/06.yml
@@ -20,7 +20,9 @@ videos:
     url: https://youtu.be/cLfp2T_LSjg
   - nombre: Grabación de la clase virtual del martes 13 de Septiembre (Polimorfismo y Colecciones)
     url: https://youtu.be/ErJLFYgpnuQ
-  - nombre: Grabación de la clase virtual del sábado 17 de Septiembre con la introducción a clases.
+  - nombre: Grabación de la clase virtual del jueves 15 de Septiembre (Colecciones)
+    url: https://youtu.be/03xz1Z_Gn9k
+  - nombre: Grabación de la clase virtual del sábado 17 de Septiembre con la introducción a clases
     url: https://youtu.be/gdz5j7eCc04
 
 conferencia:
