agregado video clase apoyo en semana 7 y se suma semana 8

--- a/_data/cursada_actual/07.yml
+++ b/_data/cursada_actual/07.yml
@@ -20,6 +20,8 @@ videos:
     url: https://youtu.be/0pggtvrIXYY
   - nombre: clases - cómo es el self ahora que tenemos clases
     url: https://youtu.be/I6bOjRAr3Wo
+  - nombre: Grabación de la clase virtual del jueves 22 de Septiembre con la implementación de los corsa en Wollok Game.
+    url: https://youtu.be/tiKPRB4qKac
 
 conferencia:
   horario0: PRESENCIAL - Martes 20 de Septiembre, a partir de las 18hs. en Laboratorio 4 de edificio Malvinas Argentinas. Prof. Gerardo Gonzalez Tulian y Hernán Coniglio
