--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -24,8 +24,10 @@ videos:
     url: https://youtu.be/c27MMRweTZM
   - nombre: expresión ternaria - un lindo truquito para escribir un poco menos, y entender un poco más
     url: https://youtu.be/1XdYc-91Vtg
-  - nombre: Grabación de la clase virtual del martes 27 de Septiembre (Clases e instancias)
+  - nombre: Grabación de la clase virtual del martes 27 de Septiembre (Colecciones, clases e instancias)
     url: https://youtu.be/mflskOHsriY
+  - nombre: Grabación de la clase virtual del jueves 29 de Septiembre (Colecciones, clases e instancias)
+    url: https://youtu.be/CRIyIzQuILg
 
 conferencia:
   horario0: Martes 27 de Septiembre (VIRTUAL) 18.00hs, Gerardo Gonzalez Tulian 
