agregado clase sabado 1-10 y semana 9

--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -28,6 +28,8 @@ videos:
     url: https://youtu.be/mflskOHsriY
   - nombre: Grabación de la clase virtual del jueves 29 de Septiembre (Colecciones, clases e instancias)
     url: https://youtu.be/CRIyIzQuILg
+  - nombre: Grabación de la clase virtual del sabado 01 de Octubre (Wollok Game avanzado)
+    url: https://youtu.be/uJYTFKQQlqs
 
 conferencia:
   horario0: Martes 27 de Septiembre (VIRTUAL) 18.00hs, Gerardo Gonzalez Tulian 
