agregado video clase jueves 13-10

--- a/_data/cursada_actual/10.yml
+++ b/_data/cursada_actual/10.yml
@@ -24,6 +24,9 @@ videos:
     url: https://youtu.be/CSqi4XWhcVk
   - nombre: Grabación de la segunda parte de clase virtual del martes 11 de Octubre (ejercicio Naves Espaciales (Clases y Herencia))
     url: https://youtu.be/1ZJt5-EFfww
+  - nombre: Grabación de la clase virtual del jueves 13 de Octubre (Herencia)
+    url: https://youtu.be/5uWTP7oao2E
+  
 
 conferencia:
   horario0: Martes 11 de Octubre (VIRTUAL) 18.00hs, Gerardo Gonzalez Tulian 
