agregado video sabado 22-10 y semana 12

--- a/_data/cursada_actual/11.yml
+++ b/_data/cursada_actual/11.yml
@@ -17,7 +17,8 @@ videos:
     url: https://youtu.be/0CI01a77_K0
   - nombre: Lo mismo aplicado a una consulta (en lugar de indicación) -  Naves Espaciales Parte VII
     url: https://youtu.be/8Bzgo8Kr0ro
-
+  - nombre: Grabación de la clase virtual del sabado 22 de Octubre (repaso con ejercicio integrador)
+    url: https://youtu.be/mXm8PvOac88
 
 
 conferencia:
