agregado videos comision 2 semana 12 y contenido semana 13 parcial

--- a/_data/cursada_actual/12.yml
+++ b/_data/cursada_actual/12.yml
@@ -1,7 +1,13 @@
 descripcion: |
   Esta semana vamos a seguir practicando para el parcial y responderemos consultas sobre el trabajo práctico. Recuerden que tenemos también el [canal de Discord](https://discord.com/channels/656909199510601744/1005464519377694721) para consultas y dudas.
 
-     
+
+  **Videos**:
+  
+  [Grabación de la clase virtual del martes 25 de Octubre (repaso de todo el contenido)](https://youtu.be/MTZk8zyrsZo)
+
+  [Grabación de la clase virtual del sabado 29 de Octubre (continuación de repaso de todo el contenido)](https://youtu.be/nPrT4jYO0FY)
+
  
 conferencia:
   horario0: Martes 25 de Octubre (VIRTUAL) 18.00hs, Gerardo Gonzalez Tulian 
